Cleanup Add Log4J2 Async Logger package as Executable